<resources>
    <string name="app_name">NewsDaily</string>

    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>

    <string name="categories_title">Categories</string>
    <string name="categories_desc">Get news from 7 different categories - General, Business, Entertainment,Health, Science, Sports and Technology</string>
    <string name="countries_title">Countries</string>
    <string name="countries_desc">Get news from over 50 countries over the globe</string>
    <string name="audio_news_title">Audio news</string>
    <string name="audio_news_desc">Want to keep updated but no time to read? Listen to latest news while working</string>

    <string name="nav_header_title">News Daily</string>
    <string name="nav_header_subtitle">andruid.magic@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="search">Search</string>
    <string name="no_results">No results</string>
    <string name="how_to_use">How to use</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>

    <string name="pref_ui_sync" translatable="false">pref_ui_sync</string>
    <string name="pref_ui_text_on">Auto swipe news cards</string>
    <string name="pref_ui_text_off">Don\'t auto swipe news cards</string>
    <string name="pref_country" translatable="false">pref_country</string>
    <string name="default_country">in</string>

    <string name="error_copy_link">Could not copy link</string>

    <string name="tts_init_error">Text to speech not initialized</string>
    <string name="description_not_found">No description available</string>
    <string name="title_not_found">No Title</string>
    <string name="no_author_found">No author</string>
    <string name="loading">Loading</string>
    <string name="fetching_news_for">Fetching %1$s news</string>
</resources>