<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_general"
        android:icon="@drawable/ic_general"
        android:title="@string/general" />
    <item android:id="@+id/menu_business"
        android:icon="@drawable/ic_business"
        android:title="@string/business"/>
    <item android:id="@+id/menu_entertainment"
        android:icon="@drawable/ic_entertainment"
        android:title="@string/entertainment"/>
    <item android:id="@+id/menu_health"
        android:icon="@drawable/ic_health"
        android:title="@string/health"/>
    <item android:id="@+id/menu_science"
        android:icon="@drawable/ic_science"
        android:title="@string/science"/>
    <item android:id="@+id/menu_sports"
        android:icon="@drawable/ic_sports"
        android:title="@string/sports"/>
    <item android:id="@+id/menu_tech"
        android:icon="@drawable/ic_tech"
        android:title="@string/technology"/>
    <item android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>
</menu>