<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_home"
    app:startDestination="@+id/nav_general">

    <fragment
        android:id="@+id/nav_general"
        android:name="com.death14stroke.newsdaily.ui.fragment.NewsFragment"
        android:label="@string/general"
        tools:layout="@layout/fragment_news">
        <argument
            android:name="category"
            android:defaultValue="general"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_business"
        android:name="com.death14stroke.newsdaily.ui.fragment.NewsFragment"
        android:label="@string/business"
        tools:layout="@layout/fragment_news">
        <argument
            android:name="category"
            android:defaultValue="business"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_entertainment"
        android:name="com.death14stroke.newsdaily.ui.fragment.NewsFragment"
        android:label="@string/entertainment"
        tools:layout="@layout/fragment_news">
        <argument
            android:name="category"
            android:defaultValue="entertainment"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_health"
        android:name="com.death14stroke.newsdaily.ui.fragment.NewsFragment"
        android:label="@string/health"
        tools:layout="@layout/fragment_news">
        <argument
            android:name="category"
            android:defaultValue="health"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_science"
        android:name="com.death14stroke.newsdaily.ui.fragment.NewsFragment"
        android:label="@string/science"
        tools:layout="@layout/fragment_news">
        <argument
            android:name="category"
            android:defaultValue="science"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_sports"
        android:name="com.death14stroke.newsdaily.ui.fragment.NewsFragment"
        android:label="@string/sports"
        tools:layout="@layout/fragment_news">
        <argument
            android:name="category"
            android:defaultValue="sports"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_tech"
        android:name="com.death14stroke.newsdaily.ui.fragment.NewsFragment"
        android:label="@string/technology"
        tools:layout="@layout/fragment_news">
        <argument
            android:name="category"
            android:defaultValue="technology"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_webview"
        android:name="com.death14stroke.newsdaily.ui.fragment.WebViewFragment"
        android:label="{newsUrl}"
        tools:layout="@layout/fragment_web_view">
        <argument
            android:name="newsUrl"
            android:defaultValue="www.google.com"
            app:argType="string" />
    </fragment>

    <action
        android:id="@+id/action_news_to_webview"
        app:destination="@id/nav_webview"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.death14stroke.newsdaily.ui.fragment.NewsFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/action_settings"
        android:name="com.death14stroke.newsdaily.ui.fragment.SettingsFragment"
        android:label="Settings" />

    <action
        android:id="@+id/action_news_to_search"
        app:destination="@id/nav_search"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />

    <activity
        android:id="@+id/action_intro"
        android:name="com.death14stroke.newsdaily.ui.activity.IntroActivity"
        android:label="IntroActivity" />

    <fragment
        android:id="@+id/nav_show_image"
        android:label=""
        android:name="com.death14stroke.newsdaily.ui.fragment.ShowImageFragment"
        tools:layout="@layout/fragment_show_image">
        <argument
            android:name="imageUrl"
            app:argType="string" />
    </fragment>

    <action
        android:id="@+id/action_news_to_show_image"
        app:destination="@id/nav_show_image" />
</navigation>